[tool.poetry]
name = "caching-service"
version = "0.1.0"
description = "Caching Service to cache the generated payloads."
authors = ["Muhammad Safdar <mosafdaralii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# FastAPI and Core Dependencies
fastapi = "^0.109.0"
uvicorn = "^0.24.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.9"
aiosqlite = "^0.20.0"   # optional, for local SQLite dev

# HTTP & Security
httpx = "^0.26.0"

# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.2"

# Logging
loguru = "^0.7.2"

# Dev tools
ruff = "^0.6.0"
black = "^24.0.0"
isort = "^5.13.0"

[tool.poetry.scripts]
cache-cli = "cli.cache_cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

